new proj/src/objects/GE_PRM_Recommendation_Approvers__c.object
<CustomObject>
    <description>This object is part of PRM module</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver Name</inlineHelpText>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recommendation_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Compliance_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Compliance Validation Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Stage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DOA Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Final_Tier_Selections__c</fullName>
        <externalId>true</externalId>
        <label>Final Tier Selections</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_P_L__c</fullName>
        <label>P&amp;L</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Region__c</fullName>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Role__c</fullName>
        <inlineHelpText>Role</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Leader 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Leader 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Leader 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Manager H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Legal Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Channel Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_0__c</fullName>
        <inlineHelpText>Tier 0</inlineHelpText>
        <label>Tier 0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1_New__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1__c</fullName>
        <inlineHelpText>Tier 1</inlineHelpText>
        <label>Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Tier_1_New__c</controllingField>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recommendation Approvers</label>
    <listViews>
        <fullName>All_O_G</fullName>
        <columns>GE_PRM_Approver_Name__c</columns>
        <columns>GE_PRM_Region__c</columns>
        <columns>GE_PRM_Country__c</columns>
        <columns>GE_PRM_Role__c</columns>
        <columns>GE_PRM_DOA_Stage__c</columns>
        <columns>GE_PRM_Compliance_Validation__c</columns>
        <columns>GE_PRM_Tier_2__c</columns>
        <columns>GE_PRM_Tier_3__c</columns>
        <columns>GE_PRM_Tier_4__c</columns>
        <columns>GE_PRM_Tier_5__c</columns>
        <columns>GE_PRM_Tier_6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_PRM_Tier_1_New__c</field>
            <operation>equals</operation>
            <value>Oil &amp; Gas (O&amp;G)</value>
        </filters>
        <label>All O&amp;G</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Recommendation Approvers Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>